# crossworlds

./: .gitignore  README.md  requirements.txt  setup.py
cpp/crossworlds/: CMakeLists.txt  Dockerfile  README.md
cpp/crossworlds/src/: CMakeLists.txt  grid.cpp  grid.h  lookup.cpp  lookup.h  solver.h  vocabulary.cpp  vocabulary.h  wordpattern.cpp  wordpattern.h
cpp/crossworlds/tests/: CMakelists.txt  grid.t.cpp  lookup.t.cpp  vocabulary.t.cpp  wordpattern.t.cpp
data/: content.json  scraper_info.json
data/translations/: Aug-aut.json  Bac-bal.json  Cat-cer.json  Col-com.json  Flor-form.json  Fris-futu.json  Hols-hôte.json  Naur-népè.json  Pria-prof.json  Tigr-Toni.json  Wuch-zèle.json  a-abo.json  a-abs.json  abo-acc.json  abs-act.json  acc-acé.json  ace-act.json  act-ado.json  act-aff.json  ado-aff.json  aff-age.json  aff-aig.json  age-aig.json  aig-alc.json  aig-alo.json  alc-all.json  all-alu.json  alo-amp.json  alu-ami.json  ami-ana.json  amp-ann.json  ana-ang.json  ang-ano.json  ann-app.json  ano-ant.json  (+253 more)
output/: 3x3.grids  4x4.grids  4x5.grids  4x6.grids  4x7.grids  4x8.grids  5x4.grids  5x5.grids  5x6.grids  5x7.grids  5x8.grids  5x9.grids  6x4.grids  6x5.grids  6x6.grids  6x7.grids  6x8.grids  6x9.grids  7x10.grids  7x4.grids  7x5.grids  7x6.grids  7x7.grids  7x8.grids  7x9.grids  8x4.grids  8x5.grids  8x6.grids  8x7.grids  8x8.grids  8x9.grids  9x8.grids  pretty.txt  sizes.json
src/: create_grids.py  grid.py  lookup.py  parse.py  prettify.py  search.py  wiki_scraper.py
test/: profile.py  profile_output  test_grid.py  test_parse.py  test_search.py
(+37 files in other folders)
